<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <group
        android:id="@+id/group1">
    <item
        android:id="@+id/menu_1"
        android:title="@string/menu_view">
    </item>
    <item
        android:id="@+id/menu_2"
        android:title="@string/menu_print">
    </item>
    <item
        android:id="@+id/menu_3"
        android:title="@string/menu_clear">
    </item>
    </group>
        <item
            android:id="@+id/menu_4"
            android:title="@string/menu_version">
        </item>
        <item
            android:id="@+id/menu_5"
            android:title="@string/menu_privacy">
        </item>
        <item
            android:id="@+id/menu_6"
            android:title="@string/menu_open">
        </item>
        <item
            android:id="@+id/menu_7"
            android:title="@string/menu_term">
        </item>


</menu>
